Handle errors in commands